# core

./: CHANGELOG.md  Makefile  README.md  repository.toml  towncrier.toml
.github/ISSUE_TEMPLATE/: atualizacao.yaml  bug.yaml  documentacao.yaml  funcionalidade.yaml
.github/workflows/: backend.yml  config.yml  docs.yml  frontend.yml  main.yml  tag.yml
backend/: .mrbob.ini  CHANGES.md  Dockerfile  Dockerfile.acceptance  Dockerfile.builder  Dockerfile.prod  Makefile  instance.yaml  pyproject.toml
backend/container/: compile_mo.py
backend/news/: +api-system.feature  +dep-plone.distribution.feature  +dep-plone.feature  +dep-plonegovbr-brfields.feature  +docker.feature  +footer.feature  +migration.bugfix  +packaging.internal  +restapi.internal  +testlayer.tests  +tests.bugfix  +upgrade.internal  +versions.feature  +voltoform.feature  12.feature  2.bugfix  3.bugfix  5.feature
backend/scripts/: create_site.py  default.json
backend/tests/: conftest.py
backend/tests/content_types/: test_available_ct.py  test_ct_document.py  test_ct_event.py  test_ct_file.py  test_ct_image.py  test_ct_link.py  test_ct_news_item.py  test_plone_site.py
backend/tests/setup/: test_setup_install.py  test_upgrades.py
backend/tests/tools/: test_migration_tool.py
backend/tests/utils/: test_utils_distributions.py  test_utils_gs.py  test_utils_packages.py  (+1 more)
docs/: conf.py  index.md  pyproject.toml
frontend/: .eslintrc.js  CHANGELOG.md  Dockerfile  Makefile  README.md  package.json  pnpm-lock.yaml  volto.config.js
news/: +docker.feature  +gha.internal  +inicial.feature
(+14 files in other folders)
